--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:theme="@style/Theme.PresupuestosLircayhub"
         tools:targetApi="31">
         <activity
-            android:name=".DescirpcionGastos"
+            android:name=".DescripcionGastos"
             android:exported="false" />
         <activity
             android:name=".Menu"
@@ -31,7 +31,7 @@
             android:name=".CrearGastos"
             android:exported="false" />
         <activity
-            android:name=".Item_Gastos"
+            android:name=".Adaptador_Gastos"
             android:exported="false" />
         <activity
             android:name=".Apartado_Gastos"
