--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,27 +34,20 @@
             android:value="AIzaSyDnI6fluO9wuExfAMooEuh4OJcMg-XJBeI" />
 
         <activity
-            android:name=".MapsActivity"
-            android:exported="false"
-            android:label="@string/title_activity_maps" />
-        <activity
-            android:name=".DescripcionGastos"
+            android:name=".Gastos.DescripcionGastos"
             android:exported="false" />
         <activity
-            android:name=".Menu"
+            android:name=".Menu_Fragment.Menu"
             android:exported="false" />
         <activity
             android:name=".SettingsActivity"
             android:exported="false"
             android:label="@string/title_activity_settings" />
         <activity
-            android:name=".CrearGastos"
+            android:name=".Gastos.CrearGastos"
             android:exported="false" />
         <activity
-            android:name=".Adaptador_Gastos"
-            android:exported="false" />
-        <activity
-            android:name=".Apartado_Gastos"
+            android:name=".Gastos.Adaptador_Gastos"
             android:exported="false" />
         <activity
             android:name=".Inicio"
